# Projet-Physique-Statistique

./: README.md  main.cpp
python pour graphes/: Derivee.txt  Energie.txt  Plots.py  Positions.txt
src/: CMakeLists.txt  Plots-2d.py  Plots-3d.py  Plots.py  main.cpp  main_2d.cpp  main_3d.cpp
srcTfixe/: Plots-2d.py  Plots-3d.py  Plots.py  main_2d.cpp  plots2d.py
